# DIPLOM_PROJECT

./: .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py  validators.py  вопросы по диплому
database/: db.py  models.py  schemas.py
routes/: auth.py  cart.py  products.py  users.py
tests/: conftest.py  test_api.py  test_db.py  test_models.py  test_support_functions.py  test_users.py  test_utils_auth.py
utils/: auth.py  support_functions.py
