[tool.poetry]
name = "diplom-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "diplom_project"}]

[tool.poetry.dependencies]
python = "^3.11"
service = "^0.6.0"
jwt = "^1.3.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "/",
]
asyncio_mode = "auto"